# agentd

./: .containerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Containerfile  Makefile  README.md  skills.manifest.toml
.agents/skills/ground/: SKILL.md
.agents/skills/project-workflow/: SKILL.md
.github/workflows/: ci.yml  skills.yml
.loadout/: agentd.toml
crates/agentd/: Cargo.toml
crates/agentd-mcp/: Cargo.toml
crates/agentd-runner/: Cargo.toml  build.rs
crates/agentd-runner/src/: audit.rs  container.rs  input.rs  lib.rs  lifecycle.rs  naming.rs  podman.rs  reconcile.rs  resources.rs  session_paths.rs  test_support.rs  types.rs  validation.rs
crates/agentd-runner/src/container/: tests.rs
crates/agentd-runner/tests/: session_lifecycle.rs
crates/agentd-scheduler/: Cargo.toml
crates/agentd-scheduler/src/: lib.rs
crates/agentd/src/: audit_root.rs  config.rs  daemon.rs  dispatch.rs  lib.rs  logging.rs  main.rs  protocol.rs  runtime_paths.rs  scheduler.rs
crates/agentd/tests/: cli_surface.rs  config_parsing.rs  daemon_operator_interface.rs  daemon_socket_interface.rs  logging_bootstrap.rs  session_dispatch.rs  workspace_contract.rs
crates/forgejo-mcp/: Cargo.toml
crates/forgejo-mcp/src/: lib.rs
crates/mcp-transport/: Cargo.toml
crates/mcp-transport/src/: lib.rs
docs/: personal-skill-overlay.md  skills-loadout-pilot-spec.md
docs/skills/: ground.md  overlay.md
examples/: agentd.toml
scripts/: skills_sync.sh  skills_verify.sh
skills/bdd/: SKILL.md
skills/bdd/references/: language-patterns.md
skills/ground/: SKILL.md
skills/issue-craft/: SKILL.md
skills/issue-craft/references/: templates.md
skills/issue-craft/scripts/: issue_lint.py
skills/land/: SKILL.md
skills/planning/: SKILL.md
tests/: gitignore_skill_targets_smoke.sh  loadout_pilot_smoke.sh
