[workspace]
members = [
    "crates/agentd",
    "crates/agentd-runner",
    "crates/agentd-scheduler",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
agentd-runner = { path = "crates/agentd-runner" }
agentd-scheduler = { path = "crates/agentd-scheduler" }
