[package]
name = "agentd-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
getrandom = "0.4.2"
tracing = "0.1.41"

[dev-dependencies]
serde_json = "1.0"
toml = "0.8"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "json"] }
