[package]
name = "agentd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
agentd-runner.workspace = true
agentd-scheduler.workspace = true
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
