[package]
name = "agentd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Linux-only build enforcement lives in crates/agentd-runner/build.rs.
agentd-runner.workspace = true
agentd-scheduler.workspace = true
clap = { version = "4.5", features = ["derive"] }
croner = "3.0.1"
getrandom = "0.4.2"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
signal-hook = "0.3"
toml = "0.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
